# ftn_solo

./: 3_leg.yaml  DIRECTION_FLAG_FIX.md  LATERAL_ROTATION_SEPARATION.md  LICENSE  README.md  package.xml  requirements.txt  setup.cfg  setup.py  solo12_model.xml  solo13_model.xml  solo_model.xml  visualize.py
config/controllers/: eurobot_demo.yaml
config/rviz/: robot.rviz  viz.rviz  wall_viz.rviz
config/tasks/: crawl_anymal.yaml  crawl_demo.yaml  crawl_go2.yaml  draw_shapes.yaml  eurobot_demo.yaml  friction_ident.yaml  friction_identification.yaml  joint_anymal.yaml  joint_go2.yaml  up_box.yaml  up_box_go2.yaml  up_slope_30.yaml  up_slope_45.yaml  up_slope_60.yaml  up_slope_60_grafik.yaml  up_slope_60_wall.yaml  up_wall.yaml  up_wall_back.yaml
controllers/: controller.py
environments/: big_box.mjcf  big_vertical_walls.mjcf  box.mjcf  plane.mjcf  slope_30.mjcf  slope_45.mjcf  slope_60.mjcf  slope_60_wall.mjcf  vertical_walls.mjcf
ftn_solo/: connector.py  identify_friction.py  joystick.py  visualize.py
ftn_solo/controllers/: __init__.py  controller_ident.py  controller_test.py  cotntoller_joint_spline.py  feedback_linearizaiton.py  pd.py  rnea.py
ftn_solo/friction_ident/: log_plot.py  model_ident.py  plot_comp_and_no_comp.py  test_log_plot.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
launch/: robot_launch.py
log/: latest_build
markers/: 4_leg.yaml  4_leg_4sides.yaml  4_leg_ik.yaml  friction_cone_wall.yaml  viz.yaml
meshes/: solo_13_base_back.stl  solo_13_base_front.stl
utils/: types.py  visualization_utils.py
(+63 files in other folders)
